[gd_scene load_steps=65 format=3 uid="uid://dgqo8vipb17e8"]

[ext_resource type="Script" path="res://prefabs/test/battle/full_battle_tester.gd" id="1_cwe7c"]
[ext_resource type="Resource" uid="uid://0qma1pdmr3vo" path="res://gamedata/combatants/mirage/mirage.tres" id="2_8cyda"]
[ext_resource type="Script" path="res://scripts/battle/combatant/combatant_ai_layer.gd" id="2_plygy"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/damage_layer.gd" id="3_31tq3"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/aggro_layer.gd" id="4_bfd7i"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/buff_layer.gd" id="5_7lkbn"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/status_layer.gd" id="6_gnrs8"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/orbs_layer.gd" id="7_4r4cj"]
[ext_resource type="Script" path="res://scripts/battle/combatant/ai_layers/random_layer.gd" id="7_l5pdx"]
[ext_resource type="Script" path="res://scripts/battle/combatant/combatant_ai.gd" id="8_ewn23"]
[ext_resource type="Script" path="res://scripts/reward/reward.gd" id="9_eqdy2"]
[ext_resource type="Script" path="res://scripts/overworld/overworld_enemy/static_encounter.gd" id="10_821vc"]
[ext_resource type="Resource" uid="uid://bwsv5hh8mitat" path="res://gamedata/items/armor/turtle_plate.tres" id="10_13824"]
[ext_resource type="Resource" uid="uid://cjom7udtbr5dg" path="res://gamedata/items/weapon/frozen_spear.tres" id="12_rhle2"]
[ext_resource type="AudioStream" uid="uid://2enxrtp1rr6y" path="res://audio/music/gateway_into_action.mp3" id="13_lem6m"]
[ext_resource type="Resource" uid="uid://dfd6upveebcdv" path="res://gamedata/combatants/dragon/dragon.tres" id="14_437fi"]
[ext_resource type="Resource" uid="uid://dqg27upoc4fmw" path="res://gamedata/combatants/dragon/dragon_stat_alloc_strategy_boss.tres" id="15_tihlj"]
[ext_resource type="Script" path="res://scripts/battle/weighted_things/weighted_stat_category.gd" id="16_vlt6a"]
[ext_resource type="Resource" uid="uid://ddbx7btl312ii" path="res://gamedata/combatants/player/player_evolutions.tres" id="17_em4kh"]
[ext_resource type="Script" path="res://scripts/battle/combatant/stat_allocation_strategies/weighted_random_allocation_strategy.gd" id="17_nsk2h"]
[ext_resource type="Script" path="res://scripts/battle/win_conditions/survive_win_con.gd" id="18_1dxcb"]
[ext_resource type="Resource" uid="uid://bcyc6jiut3ng3" path="res://gamedata/combatants/player/player_effectiveness.tres" id="18_nxyit"]
[ext_resource type="Script" path="res://scripts/battle/combatant.gd" id="19_f2kpt"]
[ext_resource type="Resource" uid="uid://byx1012pocqvt" path="res://gamedata/items/shard/dragon_shard.tres" id="19_w48o7"]
[ext_resource type="Resource" uid="uid://dvr8s8ujdy6f1" path="res://gamedata/combatants/player/player_sprite.tres" id="20_l4ilx"]
[ext_resource type="Resource" uid="uid://crei2j1v6q4jn" path="res://gamedata/moves/slice/slice.tres" id="21_dnn8x"]
[ext_resource type="Resource" uid="uid://jhhxu2gbjenp" path="res://gamedata/items/armor/standard_issue_mail.tres" id="21_lhelt"]
[ext_resource type="PackedScene" uid="uid://bk5magi8dnwgj" path="res://prefabs/battle/battle_animation_manager.tscn" id="22_3prau"]
[ext_resource type="Resource" uid="uid://bx6u2bgxrbymu" path="res://gamedata/items/weapon/tome_vol_1.tres" id="22_ge00y"]
[ext_resource type="Resource" uid="uid://b7fwd75mauun" path="res://gamedata/moves/mage_blast/mage_blast.tres" id="22_o4y65"]
[ext_resource type="Script" path="res://scripts/battle/combatant/movepool.gd" id="23_h4pwx"]
[ext_resource type="Script" path="res://scripts/battle/combatant/rune.gd" id="23_jq1m7"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/turn_executor.gd" id="23_l1bd4"]
[ext_resource type="Resource" uid="uid://bkye5pxmqsb6m" path="res://gamedata/moves/draining_bolt/draining_bolt.tres" id="24_606y3"]
[ext_resource type="Script" path="res://scripts/battle/combatant/stats.gd" id="24_n2rm1"]
[ext_resource type="Script" path="res://prefabs/test/battle/mock_battle_ui.gd" id="24_w6tqk"]
[ext_resource type="PackedScene" uid="uid://dmc2ox37dega8" path="res://prefabs/audio/audio_handler.tscn" id="25_e1byn"]
[ext_resource type="Resource" uid="uid://ddxdw8fyirruw" path="res://gamedata/combatants/player/player_stat_growth.tres" id="25_lyeej"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="26_76nyc"]
[ext_resource type="Resource" uid="uid://poj2favclae8" path="res://gamedata/moves/battle_trance/battle_trance.tres" id="26_yy50f"]
[ext_resource type="Resource" uid="uid://bnlxt86bvm38f" path="res://gamedata/moves/tidal_wave/tidal_wave.tres" id="30_1bgbv"]
[ext_resource type="Resource" uid="uid://dxwkpv5vlcigq" path="res://gamedata/moves/thunderstrike/thunderstrike.tres" id="31_etk0a"]
[ext_resource type="Script" path="res://prefabs/test/mock_audio_handler.gd" id="35_0y1m3"]
[ext_resource type="Script" path="res://scripts/battle/status_effects/reflect.gd" id="38_84ulj"]
[ext_resource type="Resource" uid="uid://d2o333em5nh4y" path="res://gamedata/moves/dehydration_curse/rune/dmg_rune_dehydration_curse_charge.tres" id="40_yvth1"]

[sub_resource type="GDScript" id="GDScript_1uyr5"]
script/source = "extends Resource
class_name Move

enum DmgCategory {
	PHYSICAL = 0, ## Physical
	MAGIC = 1, ## Magic
	AFFINITY = 2, ## Affinity
	ANY = -1, ## only for use in movepool.gd Preferences
}

enum Element {
	NONE = 0, ## No element
	WATER = 1, ## Water
	FIRE = 2, ## Fire
	LIGHTNING = 3, ## Lightning
	WIND = 4, ## Wind
	EARTH = 5, ## Earth
	NATURE = 6, ## Nature
	DARK = 7, ## Dark
	ASTRAL = 8 ## Astral
}
const NUM_ELEMENTS = 8

enum MoveEffectType {
	NONE = 0, ## For use in move-selecting AI only
	CHARGE = 1, ## Charge
	SURGE = 2, ## Surge
	BOTH = 3, ## For use in move-selecting AI only
}

@export var moveName: String = ''
@export var requiredLv: int = 1
@export var category: DmgCategory = DmgCategory.PHYSICAL
@export var element: Element = Element.NONE
@export var chargeEffect: MoveEffect = null
@export var surgeEffect: MoveEffect = null
@export_multiline var description: String = ''
@export_multiline var moveLearnedText: String = ''
@export var moveAnimation: MoveAnimation = null

static func dmg_category_to_string(c: DmgCategory) -> String:
	match c:
		DmgCategory.PHYSICAL:
			return 'Physical'
		DmgCategory.MAGIC:
			return 'Magic'
		DmgCategory.AFFINITY:
			return 'Affinity'
	return 'UNKNOWN'

static func element_to_string(e: Element) -> String:
	match e:
		Element.NONE:
			return 'None'
		Element.WATER:
			return 'Water'
		Element.FIRE:
			return 'Fire'
		Element.LIGHTNING:
			return 'Lightning'
		Element.WIND:
			return 'Wind'
		Element.EARTH:
			return 'Earth'
		Element.NATURE:
			return 'Nature'
		Element.DARK:
			return 'Dark'
		Element.ASTRAL:
			return 'Astral'
	return 'UNKNOWN'

static func move_effect_type_to_string(t: MoveEffectType) -> String:
	match t:
		MoveEffectType.NONE:
			return 'None'
		MoveEffectType.CHARGE:
			return 'Charge'
		MoveEffectType.SURGE:
			return 'Surge'
		MoveEffectType.BOTH:
			return 'Both'
	return 'UNKNOWN'

func _init(
	i_moveName = '',
	i_requiredLv = 1,
	i_category = DmgCategory.PHYSICAL,
	i_element = Element.NONE,
	i_chargeEffect = null,
	i_surgeEffect = null,
	i_description = '',
	i_moveLearnedText = '',
	
):
	moveName = i_moveName
	requiredLv = i_requiredLv
	category = i_category
	element = i_element
	chargeEffect = i_chargeEffect
	surgeEffect = i_surgeEffect
	description = i_description
	moveLearnedText = i_moveLearnedText

func get_effect_of_type(t: MoveEffectType) -> MoveEffect:
	if t == MoveEffectType.CHARGE:
		return chargeEffect
	
	if t == MoveEffectType.SURGE:
		return surgeEffect
	
	return null

func effects_with_status() -> MoveEffectType:
	var chargeStatus: bool = chargeEffect.statusEffect != null
	var surgeStatus: bool = surgeEffect.statusEffect != null
	
	if chargeStatus and surgeStatus:
		return MoveEffectType.BOTH
	
	if chargeStatus:
		return MoveEffectType.CHARGE
	
	if surgeStatus:
		return MoveEffectType.SURGE
	
	return MoveEffectType.NONE

func has_effect_with_role(role: MoveEffect.Role) -> bool:
	return chargeEffect.role == role or surgeEffect.role == role

func effects_with_role(role: MoveEffect.Role) -> MoveEffectType:
	var chargeHasEffect: bool = chargeEffect.role == role
	var surgeHasEffect: bool = surgeEffect.role == role
	
	if chargeHasEffect and surgeHasEffect:
		return MoveEffectType.BOTH
	
	if chargeHasEffect:
		return MoveEffectType.CHARGE
	
	if surgeHasEffect:
		return MoveEffectType.SURGE
	
	return MoveEffectType.NONE
"

[sub_resource type="Resource" id="Resource_lxlw8"]
script = ExtResource("9_eqdy2")
experience = 100
gold = 20
fullyAttuneCombatantSaveName = ""

[sub_resource type="Resource" id="Resource_aui8p"]
script = ExtResource("9_eqdy2")
experience = 130
gold = 30
item = ExtResource("19_w48o7")
fullyAttuneCombatantSaveName = ""

[sub_resource type="Resource" id="Resource_8ehk7"]
script = ExtResource("18_1dxcb")
minTurns = 8
staticTotalDefeatRewards = Array[ExtResource("9_eqdy2")]([SubResource("Resource_aui8p")])
winText = "You survived the battle!"
loseText = "You were defeated..."
escapeText = "You escaped successfully!"

[sub_resource type="Resource" id="Resource_14f7a"]
script = ExtResource("10_821vc")
combatant1Level = 24
combatant1Moves = Array[SubResource("GDScript_1uyr5")]([])
combatant1ShardSummoned = false
combatant2Level = 1
combatant2Moves = Array[SubResource("GDScript_1uyr5")]([])
combatant2ShardSummoned = false
combatant3Level = 1
combatant3Moves = Array[SubResource("GDScript_1uyr5")]([])
combatant3ShardSummoned = false
autoAlly = ExtResource("2_8cyda")
autoAllyLevel = 16
autoAllyArmor = ExtResource("10_13824")
autoAllyWeapon = ExtResource("12_rhle2")
autoAllyMoves = Array[SubResource("GDScript_1uyr5")]([])
autoAllyShardSummoned = false
specialBattleId = "dragon1"
bossBattle = true
canEscape = false
rewards = Array[ExtResource("9_eqdy2")]([SubResource("Resource_lxlw8")])
useStaticRewards = true
battleMusic = ExtResource("13_lem6m")
combatant1 = ExtResource("14_437fi")
combatant1StatAllocStrat = ExtResource("15_tihlj")
specialRules = 0
winCon = SubResource("Resource_8ehk7")
customWinText = "Wrauuughhhhh...!"
battleMapPath = ""

[sub_resource type="Resource" id="Resource_5jl4o"]
script = ExtResource("23_h4pwx")
pool = Array[SubResource("GDScript_1uyr5")]([ExtResource("21_dnn8x"), ExtResource("22_o4y65")])
signatureMoves = Array[SubResource("GDScript_1uyr5")]([])
preferredMove1Role = 0
preferredMove1DmgType = -1
preferredMove1Element = 0
preferredMove2Role = 0
preferredMove2DmgType = -1
preferredMove2Element = 0
preferredMove3Role = 0
preferredMove3DmgType = -1
preferredMove3Element = 0
preferredMove4Role = 0
preferredMove4DmgType = -1
preferredMove4Element = 0

[sub_resource type="Resource" id="Resource_ln7df"]
script = ExtResource("24_n2rm1")
displayName = "Player"
saveName = "player"
level = 1
experience = 0
maxHp = 50
physAttack = 1
magicAttack = 1
resistance = 1
affinity = 1
speed = 1
statPts = 0
statGrowth = ExtResource("25_lyeej")
equippedWeapon = ExtResource("22_ge00y")
equippedArmor = ExtResource("21_lhelt")
moves = Array[SubResource("GDScript_1uyr5")]([ExtResource("24_606y3"), ExtResource("30_1bgbv"), ExtResource("31_etk0a"), ExtResource("26_yy50f")])
movepool = SubResource("Resource_5jl4o")

[sub_resource type="Resource" id="Resource_7loi3"]
script = ExtResource("19_f2kpt")
sprite = ExtResource("20_l4ilx")
nickname = ""
stats = SubResource("Resource_ln7df")
evolutions = ExtResource("17_em4kh")
evolutionStats = {}
minionStatAllocMode = -1
currentHp = -1
orbs = 0
runes = Array[ExtResource("23_jq1m7")]([])
triggeredRunes = Array[ExtResource("23_jq1m7")]([])
triggeredRunesDmg = Array[int]([])
triggeredRunesStatus = Array[bool]([])
friendship = 0.0
maxFriendship = 30.0
version = ""
aiType = 0
damageAggroType = 0
strategy = 0
aiOverrideWeight = 0.0
moveEffectiveness = ExtResource("18_nxyit")
downed = false
battleStorageHp = -1
battleStorageOrbs = -1

[sub_resource type="Resource" id="Resource_tiqmo"]
script = ExtResource("4_bfd7i")
aggroStrategy = 1
weight = 0.35
subLayers = Array[ExtResource("2_plygy")]([])

[sub_resource type="Resource" id="Resource_tfvys"]
script = ExtResource("3_31tq3")
healLayer = false
weight = 0.65
subLayers = Array[ExtResource("2_plygy")]([SubResource("Resource_tiqmo")])

[sub_resource type="Resource" id="Resource_yr6r6"]
script = ExtResource("5_7lkbn")
buffStrategy = 2
weight = 0.5
subLayers = Array[ExtResource("2_plygy")]([])

[sub_resource type="Resource" id="Resource_bhxpi"]
script = ExtResource("6_gnrs8")
weight = 0.35
subLayers = Array[ExtResource("2_plygy")]([])

[sub_resource type="Resource" id="Resource_jehht"]
script = ExtResource("7_4r4cj")
mostOrbsWeight = 1.15
weight = 0.4
subLayers = Array[ExtResource("2_plygy")]([])

[sub_resource type="Resource" id="Resource_4sjat"]
script = ExtResource("7_l5pdx")
weight = 0.3
subLayers = Array[ExtResource("2_plygy")]([])

[sub_resource type="Resource" id="Resource_q6qyh"]
script = ExtResource("8_ewn23")
layers = Array[ExtResource("2_plygy")]([SubResource("Resource_tfvys"), SubResource("Resource_yr6r6"), SubResource("Resource_bhxpi"), SubResource("Resource_jehht"), SubResource("Resource_4sjat")])
orbSpendStrategy = 0
stalenessTolerance = 1.4
lastMovesEffect = 0
timesUsedLastMove = 0

[sub_resource type="Resource" id="Resource_rtfcg"]
script = ExtResource("16_vlt6a")
category = 1
weight = 0.65

[sub_resource type="Resource" id="Resource_wru7h"]
script = ExtResource("16_vlt6a")
category = 2
weight = 0.35

[sub_resource type="Resource" id="Resource_mniaa"]
script = ExtResource("17_nsk2h")
categories = Array[ExtResource("16_vlt6a")]([SubResource("Resource_rtfcg"), SubResource("Resource_wru7h")])

[sub_resource type="Resource" id="Resource_6iopj"]
script = ExtResource("38_84ulj")
type = 8
potency = 1
overwritesOtherStatuses = false
turnsLeft = 3

[node name="FullBattleTester" type="Node2D"]
script = ExtResource("1_cwe7c")
useBattleAnims = false
encounter = SubResource("Resource_14f7a")
_playerCombatant = SubResource("Resource_7loi3")
playerLv = 16
playerAi = SubResource("Resource_q6qyh")
playerStatAllocStrat = SubResource("Resource_mniaa")
playerStatus = SubResource("Resource_6iopj")
enemy1Runes = Array[ExtResource("23_jq1m7")]([ExtResource("40_yvth1")])
enemy1RuneCasterPositions = Array[String](["You"])

[node name="BattleAnimationManager" parent="." instance=ExtResource("22_3prau")]

[node name="EnemyCombatant1" parent="BattleAnimationManager" index="5"]
role = 1

[node name="EnemyCombatant2" parent="BattleAnimationManager" index="6"]
role = 1

[node name="EnemyCombatant3" parent="BattleAnimationManager" index="7"]
role = 1

[node name="BattlefieldShade" parent="BattleAnimationManager" index="8"]
offset_top = -90.0
offset_bottom = 43.0

[node name="TurnExecutor" type="Node" parent="." node_paths=PackedStringArray("battleController", "battleUI")]
script = ExtResource("23_l1bd4")
battleController = NodePath("..")
battleUI = NodePath("../MockBattleUI")

[node name="MockBattleUI" type="Camera2D" parent="." node_paths=PackedStringArray("battleController")]
zoom = Vector2(4, 4)
script = ExtResource("24_w6tqk")
menuState = 6
battleController = NodePath("..")

[node name="MockAudioHandler" parent="." instance=ExtResource("25_e1byn")]
script = ExtResource("35_0y1m3")

[node name="SfxButton" parent="." instance=ExtResource("26_76nyc")]
offset_left = -25.0
offset_top = 49.0
offset_right = 30.0
offset_bottom = 80.0
text = "Next"

[connection signal="combatant_animation_complete" from="BattleAnimationManager" to="." method="_on_battle_animation_manager_combatant_animation_complete"]
[connection signal="combatant_animation_start" from="BattleAnimationManager" to="." method="_on_battle_animation_manager_combatant_animation_start"]

[editable path="BattleAnimationManager"]
[editable path="BattleAnimationManager/PlayerCombatant"]
[editable path="BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/PlayerCombatant/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/MinionCombatant"]
[editable path="BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/MinionCombatant/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant1"]
[editable path="BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant1/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant2"]
[editable path="BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant2/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant3"]
[editable path="BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant3/HPTag/OrbDisplay"]
